Fixed vertical aligning issues with IE for .about-info, re-added tabs for mobile

--- a/css/sections/_about.scss
+++ b/css/sections/_about.scss
@@ -27,7 +27,6 @@ section.about {
 		ul.tabs{
 			@include display(flex);
 			@include flex-direction(row);
-			@include justify-content(space-between);
 			margin: 0px;
 			padding: 0px;
 			list-style: none;
@@ -63,8 +62,8 @@ section.about {
 
 		.tab-content{
 			display: none;
-			min-height: 340px;
-			padding: $default-padding;
+			height: 300px;
+			padding: $default-padding $default-padding $default-padding*2 $default-padding;
 		}
 
 		.tab-content.current{
@@ -115,26 +114,43 @@ section.about {
 
   	section.about {
         padding-top: $default-padding;
+        padding-bottom: $default-padding;
     }
 
 		section.about h1 {
-			font-size: 2.75em;
-      font-weight: 200;
-			max-width: 100%;
+			font-size: 2.75rem;
+      max-width: 100%;
 		}
 
-		.about-info {
+    .about-info p {
+      font-size: 1.2rem !important;
+      padding: 0 $default-padding/8;
+    }
 
-		}
+    .about-info {
+      margin-bottom: $default-margin/2;
+    }
 
         .tab-content {
-            padding: $default-padding/2;
-            min-height: 260px;
+            padding: 5px !important;
+            height: 240px;
         }
 
-			ul.tabs {
-				display: none;
-			}
+      ul.tabs {
+      }
+
+      ul.tabs li{
+  			text-transform: uppercase;
+  			font-weight: 300;
+  			letter-spacing: 0px;
+  			background: rgba($light-base-color, .8);
+  			@include display(flex);
+        @include flex-direction(column);
+  			padding: $default-padding/2 0 $default-padding/2 0;
+  			cursor: pointer;
+  			width: 100%;
+  			@include transition(all $default-transition ease);
+  		}
 
 }
 
