--- a/css/sections/_portfolio.scss
+++ b/css/sections/_portfolio.scss
@@ -75,13 +75,6 @@ section.portfolio {
 						@include transition(all $default-transition ease);
 					}
 
-					.work-item-unit:focus .overlay {
-						bottom: 0;
-						background: $light-base-color;
-            opacity: 1;
-						@include transition(all $default-transition/2 ease);
-					}
-
             .work-container img.work-item {
                 margin-bottom: 0px; /* eliminates vertical space b/t .work-items */
 		            z-index: -1;
@@ -90,40 +83,26 @@ section.portfolio {
             }
 
         .work-focus {
+            display: block;
             height: 0;
             opacity: 0; /* hides the element so as not to impact height of the entire section */
             position: relative;
             visibility: hidden;
-            //top: 100%;
-            max-width: 100%;
-            @include display(flex);
-            @include flex-direction(column);
-            @include align-items(center);
-            @include transition(all $default-transition*2 ease);
+            @include transition(all $default-transition ease);
         }
 
             .work-focus.slide {
                 @extend .fade-in;
-                max-height: 100%;
-                visibility: visible;
-                opacity: 1; /* div is no longer hidden when this class is applied */
-                //@include transition(all $default-transition*3 ease);
-            }
-
-            .work-container.remove, .work-focus.remove {
-                @extend .fade-out;
-                max-height: 0;
-                opacity: 0;
-                @include transition(all $default-transition*2 ease);
                 height: 100%;
-                opacity: 1; /* div is no longer hidden when this class is applied */
-                //top: 0%;
-                @include transition(all $default-transition*2 ease);
+                visibility: visible;
+                @include transition(all $default-transition ease);
             }
 
             .work-container.remove, .work-focus.remove {
+                //display: block;
+                @extend .fade-out;
                 height: 0; opacity: 0;
-                @include transition(all $default-transition*3 ease);
+                @include transition(all $default-transition ease);
             }
 
             .work-focus .return {
