--- a/css/style.scss
+++ b/css/style.scss
@@ -179,10 +179,6 @@ h4 {
 		padding: 0 $default-padding/2;
 	}
 
-    h1 {
-        font-weight: 300 !important;
-    }
-
 }
 
 /* Small devices (tablets, 768px to 992px) */
