--- a/css/vars/_animations.scss
+++ b/css/vars/_animations.scss
@@ -1,6 +1,6 @@
 .fade-in {
-    -webkit-animation-duration: $default-transition*2;
-    animation-duration: $default-transition*2;
+    -webkit-animation-duration: $default-transition;
+    animation-duration: $default-transition;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
     -webkit-animation-name: fade-in;
@@ -17,8 +17,8 @@
 }
 
 .fade-out {
-    -webkit-animation-duration: $default-transition*2;
-    animation-duration: $default-transition*2;
+    -webkit-animation-duration: $default-transition;
+    animation-duration: $default-transition;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
     -webkit-animation-name: fade-out;
